--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,6 +14,13 @@
       </a>
     </li>
     {% endif %}
+    {% if site.twitter_username %}
+    <li>
+      <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank">
+        <i class="fa fa-twitter-square" aria-hidden="true"></i>
+      </a>
+    </li>
+    {% endif %}
     {% if site.facebook_username %}
       <li>
         <a href="https://www.facebook.com/{{ site.facebook_username }}" target="_blank">
