--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,6 +38,10 @@
           <i class="fa fa-rss-square" aria-hidden="true"></i>
          </a>
     </li>
+    <li>
+   		<a href="[{{ site.email }}](mailto:{{ site.email }})">
+   		<i class="fa fa-envelope" aria-hidden="true"></i>	
+    </li>
   </ul>
   <span class="site-footer-credits">Copyright © {{ site.time | date: '%Y' }} {{ site.author }}</span>
 </footer>
