--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,8 +39,9 @@
          </a>
     </li>
     <li>
-   		<a href="[{{ site.email }}](mailto:{{ site.email }})">
-   		<i class="fa fa-envelope" aria-hidden="true"></i>	
+   		<a href="(mailto:{{ site.email }})">
+   		<i class="fa fa-envelope" aria-hidden="true"></i>
+   		</a>	
     </li>
   </ul>
   <span class="site-footer-credits">Copyright © {{ site.time | date: '%Y' }} {{ site.author }}</span>
