--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,7 +39,7 @@
          </a>
     </li>
     <li>
-   		<a href="(mailto:{{ site.email }})">
+   		<a href="mailto:{{ site.email }}">
    		<i class="fa fa-envelope" aria-hidden="true"></i>
    		</a>	
     </li>
