--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,5 +29,5 @@
       </li>
     {% endif %}
   </ul>
-  <span class="site-footer-credits">Copyright © {{ site.time | date: '%Y' }} {{ site.email }}</span>
+  <span class="site-footer-credits">Copyright © {{ site.time | date: '%Y' }}</span>
 </footer>
