add email to footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,4 +30,5 @@
     {% endif %}
   </ul>
   <span class="site-footer-credits">Copyright © {{ site.time | date: '%Y' }}</span>
+  <span class="site-footer-credits">Contact Me {{ site.email }}</span>
 </footer>
