--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,5 +30,6 @@
     {% endif %}
   </ul>
   <span class="site-footer-credits">Copyright © {{ site.time | date: '%Y' }}</span>
-  <span class="site-footer-credits">Contact Me {{ site.email }}</span>
+  <br/>  
+  <span class="site-footer-credits">{{ site.email }}</span>
 </footer>
