--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,15 +21,10 @@
       </a>
     </li>
     {% endif %}
-    {% if site.facebook_username %}
-      <li>
-        <a href="https://www.facebook.com/{{ site.facebook_username }}" target="_blank">
-          <i class="fa fa-facebook-square" aria-hidden="true"></i>
-         </a>
-      </li>
-    {% endif %}
   </ul>
   <span class="site-footer-credits">Copyright © {{ site.time | date: '%Y' }}</span>
-  <br/>  
+  <br/> 
+  <span class="site-footer-credits">{{ site.author }}</span>
+  <br/> 
   <span class="site-footer-credits">{{ site.email }}</span>
 </footer>
