--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <footer class="site-footer">
   <ul class="fa-ul">
+  <span>
     {% if site.github_username %}
       <li>
         <a href="https://github.com/{{ site.github_username }}" target="_blank">
@@ -21,6 +22,7 @@
       </a>
     </li>
     {% endif %}
+    </span>
   </ul>
   <span class="site-footer-credits">Copyright © {{ site.time | date: '%Y' }}</span>
   <br/> 
