--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,5 @@
 <footer class="site-footer">
   <ul class="fa-ul">
-  <span>
     {% if site.github_username %}
       <li>
         <a href="https://github.com/{{ site.github_username }}" target="_blank">
@@ -22,7 +21,11 @@
       </a>
     </li>
     {% endif %}
-    </span>
+    <li>
+      <a href="https://cbctech.net/" target="_blank">
+        <i class="fa fa-wordpress" aria-hidden="true"></i>
+      </a>
+    </li>
   </ul>
   <span class="site-footer-credits">Copyright © {{ site.time | date: '%Y' }}</span>
   <br/> 
