--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,6 +26,11 @@
         <i class="fa fa-wordpress" aria-hidden="true"></i>
       </a>
     </li>
+    <li>
+      <a href="https://www.yelp.com/biz/cbc-technologies-north-port-2/" target="_blank">
+        <i class="fa fa-yelp" aria-hidden="true"></i>
+      </a>
+    </li>
   </ul>
   <span class="site-footer-credits">Copyright © {{ site.time | date: '%Y' }}</span>
   <br/> 
@@ -33,3 +38,4 @@
   <br/> 
   <span class="site-footer-credits">{{ site.email }}</span>
 </footer>
+
