--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,8 @@
   <ul class="navbar-nav">
     <li><a href="/">Home</a></li>
     <li><a href="/about">About</a></li>
+    <li><a href="/test">Test</a></li>
+    <li><a href="/resume">Resume</a></li>
   </ul>
 </div>
 <section class="page-header">
