--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <ul class="navbar-nav">
     <li><a href="/">Home</a></li>
     <li><a href="/resume">Resume</a></li>
-    <li><a href="/about">About</a></li>
+    <li><a href="/contact">Contact</a></li>
   </ul>
 </div>
 <section class="page-header">
