--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,7 @@
     <li><a href="/home">Home</a></li>
     <li><a href="/contact">Contact</a></li>
     <li><a href="/repos">Repos</a></li>
+    <li><a href="/resume">Resume</a></li>
   </ul>
 </div>
 <section class="page-header">
