--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,6 +31,11 @@
         <i class="fa fa-yelp" aria-hidden="true"></i>
       </a>
     </li>
+    <li>
+      <a href="https://cbctech.app" target="_blank">
+        <i class="fa fa-mastodon" aria-hidden="true"></i>
+      </a>
+    </li>
   </ul>
   <span class="site-footer-credits">Copyright © {{ site.time | date: '%Y' }}</span>
   <br/> 
