--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,7 +28,7 @@
     </li>
     <li>
       <a href="https://www.yelp.com/biz/cbc-technologies-north-port-2/" target="_blank">
-        <i class="fa fa-yelp" aria-hidden="true"></i>
+        <i class="fa-brands fa-yelp" aria-hidden="true"></i>
       </a>
     </li>
     <li>
