--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,12 +28,12 @@
     </li>
     <li>
       <a href="https://www.yelp.com/biz/cbc-technologies-north-port-2/" target="_blank">
-        <i class="fa-brands fa-yelp" aria-hidden="true"></i>
+        <i class="fa fa-yelp" aria-hidden="true"></i>
       </a>
     </li>
     <li>
       <a href="https://cbctech.app" target="_blank">
-        <i class="fa fa-mastodon" aria-hidden="true"></i>
+        <i class="fa-brands fa-mastodon" aria-hidden="true"></i>
       </a>
     </li>
   </ul>
