--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,8 +39,8 @@
   </ul>
   <span class="site-footer-credits">Copyright © {{ site.time | date: '%Y' }}</span>
   <br/> 
-  <span class="site-footer-credits">{{ site.author }}</span>
+ /* <span class="site-footer-credits">{{ site.author }}</span>
   <br/> 
-  <span class="site-footer-credits">{{ site.email }}</span>
+  <span class="site-footer-credits">{{ site.email }}</span> */
 </footer>
 
