--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,7 +33,7 @@
     </li>
     <li>
       <a href="https://cbctech.app" target="_blank">
-        <i class="fa fa-google-plus-square" aria-hidden="true"></i>
+        <i class="fab fa-mastodon" aria-hidden="true"></i>
       </a>
     </li>
   </ul>
