--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,8 +32,8 @@
       </a>
     </li>
     <li>
-      <a href="https://cbctech.app" target="_blank">
-        <i class="fab fa-mastodon" aria-hidden="true"></i>
+      <a href="https://g.page/r/CcuRBSpeH78NEBM/" target="_blank">
+        <i class="fa fa-google-plus" aria-hidden="true"></i>
       </a>
     </li>
   </ul>
