--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,9 +16,14 @@
     {% endif %}
     {% if site.twitter_username %}
     <li>
-      <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank">
+      <a href="https://cbctech.app" target="_blank">
         <i class="fa fa-twitter-square" aria-hidden="true"></i>
       </a>
+      <!--
+      <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank">
+        <i class="fa fa-twitter-square" aria-hidden="true"></i>
+      </a> 
+      -->
     </li>
     {% endif %}
     <li>
