--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,14 +16,9 @@
     {% endif %}
     {% if site.twitter_username %}
     <li>
-      <a href="https://cbctech.app" target="_blank">
-        <i class="fa fa-twitter-square" aria-hidden="true"></i>
-      </a>
-      <!--
       <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank">
         <i class="fa fa-twitter-square" aria-hidden="true"></i>
       </a> 
-      -->
     </li>
     {% endif %}
     <li>
@@ -39,6 +34,11 @@
     <li>
       <a href="https://g.page/r/CcuRBSpeH78NEBM/" target="_blank">
         <i class="fa fa-google-plus" aria-hidden="true"></i>
+      </a>
+    </li>
+    <li>
+      <a href="https://cbctech.app/" target="_blank">
+        <i class="fa fa-twitter-square" aria-hidden="true"></i>
       </a>
     </li>
   </ul>
