--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,7 +37,7 @@
       </a>
     </li>
     <li>
-      <a href="https://cbctech.app/about/" target="_blank">
+      <a href="https://cbctech.app/public/" target="_blank">
         <i class="fa fa-twitter-square" aria-hidden="true"></i>
       </a>
     </li>
