--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,6 +5,18 @@ layout: default
 <div class="home">
 
   {{ content }}
+
+  Writing intros is hard, here's my spiel...  
+  
+**My Mission Statement**  
+ 
+CBC Technologies, (aka CBC), was founded on January 1, 2007 to provide commercial and residential clients affordable, reliable computer, printer, and network solutions.
+- Affordable is NOT lowest cost -- if you're shopping for the cheapest service and support, (aka race to the bottom), please keep moving as there is nothing to see here. 
+- Reliability is a balance between:  
+-- good  
+-- fast  
+-- cost  
+General rule of thumb is pick any two, trying to achieve all three is incredibly difficult.  
   
   <ul class="post-list">
     {% for post in site.posts %}
